test: test jvm 8